tests/negative/undef_fcn.def
// Test that undefined functions produce an error.

def foo () -> void
begin
    bar();
end
